# hermes-agent-self-evolution

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_evolution.py
.github/workflows/: ci.yml
evolution/: __main__.py
evolution/code/: __init__.py  evolve_tool_code.py
evolution/core/: __init__.py  benchmark_gate.py  config.py  constraints.py  cost_tracker.py  dataset_builder.py  external_importers.py  fitness.py  pr_builder.py  utils.py
evolution/monitor/: __init__.py  continuous_evolution.py
evolution/prompts/: __init__.py  evolve_prompt_section.py
evolution/skills/: evolve_skill.py  skill_module.py
evolution/tools/: __init__.py  evolve_tool_descriptions.py
tests/core/: test_constraints.py  test_external_importers.py
tests/integration/: test_evolution_pipeline.py  test_phase2_phase3.py
tests/skills/: test_skill_module.py
