[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent-self-evolution"
version = "0.1.0"
description = "Evolutionary self-improvement for Hermes Agent — optimize skills, prompts, tool descriptions, and code using DSPy + GEPA"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Nous Research", email = "team@nousresearch.com"},
]
keywords = ["llm", "optimization", "evolution", "dspy", "gepa", "hermes", "agent"]

dependencies = [
    "dspy>=3.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
darwinian = [
    "darwinian-evolver",
]

[project.urls]
Homepage = "https://github.com/NousResearch/hermes-agent-self-evolution"
Repository = "https://github.com/NousResearch/hermes-agent-self-evolution"

[tool.setuptools.packages.find]
include = ["evolution*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "I",   # isort
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
]
ignore = ["E501"]  # line too long — black handles this

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
